--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "geojson-world-map": "0.0.2",
     "leaflet": "^1.5.1",
     "massive": "^5.11.2",
+    "material-ui": "^0.20.2",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
