--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.9",
     "@material-ui/core": "^4.3.1",
+    "@material-ui/pickers": "^3.2.2",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.0.0",
@@ -21,6 +23,7 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-slideshow-image": "^1.2.1",
     "redux": "^4.0.4",
     "redux-promise-middleware": "^6.1.1"
   },
