--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@date-io/date-fns": "^1.3.9",
     "@material-ui/core": "^4.3.1",
+    "@material-ui/icons": "^4.2.1",
     "@material-ui/pickers": "^3.2.2",
+    "@trendmicro/react-sidenav": "^0.4.5",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.0.0",
@@ -16,6 +18,7 @@
     "leaflet-geosearch": "^2.7.0",
     "massive": "^5.11.2",
     "material-ui": "^0.20.2",
+    "mdbreact": "^4.19.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -24,6 +27,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-slideshow-image": "^1.2.1",
+    "react-toolbox": "^2.0.0-beta.13",
     "redux": "^4.0.4",
     "redux-promise-middleware": "^6.1.1"
   },
