--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@trendmicro/react-sidenav": "^0.4.5",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
+    "data.js": "^0.12.9",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
@@ -20,6 +21,7 @@
     "material-ui": "^0.20.2",
     "mdbreact": "^4.19.0",
     "node-sass": "^4.12.0",
+    "osm-countries-geojson": "^1.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-leaflet": "^2.4.0",
