add toggle switches to each friend to toggle thier countries

--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "node-sass": "^4.12.0",
     "osm-countries-geojson": "^1.0.1",
     "react": "^16.8.6",
+    "react-color": "^2.17.3",
     "react-dom": "^16.8.6",
     "react-leaflet": "^2.4.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-slideshow-image": "^1.2.1",
+    "react-switch": "^5.0.1",
     "react-toolbox": "^2.0.0-beta.13",
     "redux": "^4.0.4",
     "redux-promise-middleware": "^6.1.1"
